# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: sonarqube.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  test_db.py  urls.py  views.py
task_manager/fixtures/: user.json
task_manager/labels/: forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  test_filter.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py  0003_alter_task_labels.py
task_manager/templates/: base.html  form.html  index.html
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: delete.html  index.html
task_manager/templates/tasks/: delete.html  detail.html  filter.html  index.html
task_manager/templates/users/: delete.html  index.html
task_manager/users/: admin.py  mixins.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
